--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,10 +19,9 @@
     @apply text-black;
   }
   * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-    max-width: 1200px;
   }
 }
 
